tdf#107035 Fix field character style DOCX import

Reinstate a call to DontExpandFormat which was removed from
appendTextContent in commit 232ad2f2588beff50cb5c1f3b689c581ba317583

This ensures that direct character formatting which ended immediately
before the insertion point will not be expanded to cover the inserted
content.

Reviewed-on: https://gerrit.libreoffice.org/50729
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit 18cbb8fe699131a234355e1d00fa917fede6ac46)

Change-Id: Ie5fa6b5c5acee4f885f9e67535e98801af23661a